--- a/cocktail/ui/resources/styles/cocktail-ui-stacknode.scss
+++ b/cocktail/ui/resources/styles/cocktail-ui-stacknode.scss
@@ -100,6 +100,7 @@
     display: flex;
     flex-direction: column;
     flex: 1 1 auto;
+    overflow: hidden;
     border: 1px solid $stacknode-exposed-border-color;
     border-right: none !important;
     border-bottom: none !important;
